gfx/wr/swgl/build.rs
@@ -125,10 +125,12 @@ fn main() {
 
     write_load_shader(&shaders);
 
+    println!("cargo:rerun-if-changed=src/blend.h");
     println!("cargo:rerun-if-changed=src/composite.h");
     println!("cargo:rerun-if-changed=src/gl_defs.h");
     println!("cargo:rerun-if-changed=src/glsl.h");
     println!("cargo:rerun-if-changed=src/program.h");
+    println!("cargo:rerun-if-changed=src/rasterize.h");
     println!("cargo:rerun-if-changed=src/swgl_ext.h");
     println!("cargo:rerun-if-changed=src/texture.h");
     println!("cargo:rerun-if-changed=src/vector_type.h");
